# text2sql-dataset-analyzer

./: .gitignore  DEV_TEMP_HELP.md  QUERY_STRUCTURE_REPORT_MINIMAL.md  QUERY_STRUCTURE_REPORT_PROPOSAL.md  README.md  pyproject.toml
IN_PROGRESS_Aticle/: ARCHITECTURE_DIAGRAM_V2_RATIONALE.md  DELIVERABLES_SUMMARY.md  MainArtcile.docx  README_DELIVERABLES.md  Section2_Architecture_EN_v2.docx  Section2_Architecture_EN_v2_old3.docx  Section3_Analysis_EN_v2.docx  Section3_Analysis_EN_v2_old1.docx  Section3_Analysis_EN_v2_old2.docx  Section4_5_6_Results_Discussion_Conclusion_v3.docx  V1_VS_V2_COMPARISON.md  antipattern_analysis.md  generate_results_discussion_conclusion_v3.py  generate_section2_docx_v2.py  generate_section3_docx_v2.py  query_antipattern_detector.docx
IN_PROGRESS_Aticle/MainArtcile/: Backup of MainArtcile.docx
IN_PROGRESS_Aticle/REVIEW_BY_ANDREW_N/: ACTION_PLAN_UA.md  QUICK_REFERENCE.md  README_REVIEW_DOCS.md  REVIEWER_RESPONSE_DETAILED.md  REVIEWER_RESPONSE_DRAFT.md  REVIEW_SUMMARY_FINAL.md
IN_PROGRESS_Aticle/Section2_Architecture_EN_v2/: Backup of Section2_Architecture_EN_v2.docx
IN_PROGRESS_Aticle/Section3_Analysis_EN_v2/: Backup of Section3_Analysis_EN_v2.docx
IN_PROGRESS_Aticle/all_diagrams/: README.md  (+1 more)
Spider Dataset_1761414728/: schema_validation_report.md
configs/: for_commit.yaml  pipeline.example.yaml  pipeline.example_15.03.2026.yaml  pipeline.mini.ds.example.yaml  semantic_llm_prompts.yaml
data_examples/: spider-tiny-9.jsonl  spider-tiny.jsonl  spider_tiny.jsonl  train-all.jsonl  train-comprehensive.jsonl  train-small.jsonl
docs/: ARCHITECTURE.md  CLI_USAGE.md  COMPREHENSIVE_TEST_COVERAGE.txt  DUCKDB_VS_SQLITE_COMPARISON.txt  Hotwire_Extracts_Adaptor_Easy_Explanation.md  IMPROVEMENTS.md  QUERY_STRUCTURE_REPORT_PROPOSAL.md  STATUS_SYSTEM_IMPROVEMENTS.md  architecture.mmd
scripts/: build_calibration_subsets.py  compute_calibration_metrics.py  export_calibration_table.py  generate_calibration_sample.py
tests/: test_config_env_vars.py  test_db_manager_ddl.py  test_duckdb_integration.py  test_exec_sqlite.py  test_prompt_template_file.py  test_query_antipattern_detector.py  test_query_execution_safe.py  test_query_syntax.py  test_query_syntax_comprehensive.py  test_query_syntax_feature_collect.py  test_semantic_llm_judge.py  test_streaming_pipeline.py
(+193 files in other folders)
