[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "text2sql-pipeline"
version = "0.1.0"
description = "Streaming Text-to-SQL dataset processing pipeline with analyzers and SQLite-first execution"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
  "openai==2.6.1",
  "google-genai==1.65.0",
  "pydantic==2.12.3",
  "sqlglot==27.27.0",
  "click==8.3.0",
  "PyYAML==6.0.3",
  "SQLAlchemy==2.0.44",
  "datasets==2.21.0",
  "huggingface-hub==0.35.3",
  "pyarrow==18.1.0",
  "dependency-injector==4.48.2",
  "duckdb==1.4.1",
]

[project.optional-dependencies]
dev = [
  "pytest==8.4.2",
  "pytest-cov==7.0.0",
  "black==25.9.0",
  "isort==7.0.0",
]
progress = [
  "rich==14.2.0",  # For enhanced progress display
  "tqdm==4.67.1",  # Fallback progress bars
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
text2sql = "text2sql_pipeline.cli.main:main"

[tool.pytest.ini_options]
# Register your custom mark so `pytest -m run` selects these tests
markers = [
  "run: tests included when running `-m run`",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
